--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flexbox-react": "^4.4.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "flexbox-react": "^4.4.0"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
